@@ -104,11 +104,3 @@
 <?php endforeach; ?>
   </tbody>
 </table>
-
-<?php if (!empty($forum_legend)): ?>
-  <?php print $forum_legend; ?>
-<?php endif; ?>
-
-<?php if (!empty($forum_statistics)): ?>
-  <?php print $forum_statistics; ?>
-<?php endif; ?>
