@@ -21,30 +21,40 @@
 ?>
 
 <?php if ($forums_defined): ?>
-<div id="forum">
-  <?php if (empty($topics)): ?>
-    <?php // We only want these printed on top on the main forum page ?>
-    <div class="forum-secondary-links"><?php print $forum_secondary_links ?></div>
-  <?php endif; ?>
-  
-   <?php if ($search): ?>
-    <div id="search-all-forums"><?php print $search; ?></div>
-  <?php endif; ?>
+  <div id="forum">
+    <?php if (empty($topics)): ?>
+      <?php // We only want these printed on top on the main forum page ?>
+      <div class="forum-secondary-links clear-block"><?php print $forum_secondary_links ?></div>
+    <?php endif; ?>
+    
+     <?php if ($search): ?>
+      <div id="search-all-forums"><?php print $search; ?></div>
+    <?php endif; ?>
 
-  <?php print $forums; ?>
-  
-  <?php if (!empty($topics)): ?>
-    <?php // Print a set on top of the topics. ?>
-    <div class="forum-primary-links clear-block"><?php print $forum_links ?></div>
-    <div class="forum-secondary-links clear-block"><?php print $forum_secondary_links ?></div>
-  <?php endif; ?>
-  
-  <?php print $topics; ?>
-  
-  <?php if (!empty($topics)): ?>
-    <?php // Print a set under the topics. ?>
-    <div class="forum-primary-links clear-block"><?php print $forum_links ?></div>
-    <div class="forum-secondary-links clear-block"><?php print $forum_secondary_links ?></div>
-  <?php endif; ?>
-</div>
+    <?php print $forums; ?>
+    
+    <?php if (!empty($topics)): ?>
+      <?php // Print a set on top of the topics. ?>
+      <div class="forum-primary-links"><?php print $forum_links ?></div>
+      <div class="forum-secondary-links clear-block"><?php print $forum_secondary_links ?></div>
+    <?php endif; ?>
+    
+    <?php print $topics; ?>
+    
+    <?php if (!empty($topics)): ?>
+      <?php // Print a set under the topics. ?>
+      <div class="forum-primary-links"><?php print $forum_links ?></div>
+      <div class="forum-secondary-links clear-block"><?php print $forum_secondary_links ?></div>
+    <?php endif; ?>
+
+    <?php if (empty($topics) && !empty($forum_legend)): ?>
+      <?php // Only print legend on pages with no topics to avoid clutter. ?>
+      <?php print $forum_legend; ?>
+    <?php endif; ?>
+
+     <?php if (arg(1) == '' && !empty($forum_statistics)): ?>
+       <?php // Only print stats on main forum page. ?>
+       <?php print $forum_statistics; ?>
+     <?php endif; ?>
+  </div>
 <?php endif; ?>
