@@ -61,12 +61,12 @@ ul.forum-links li {
 
 /* New topic / New poll / Etc */
 .forum-primary-links {
+  float: left;
 }
 
 /* Mark as read & views */
 .forum-secondary-links {
-  float: left;
-  margin: 10px 0 0 0;
+  padding: 5px 0 0 0;
 }
 
 /* Image replacement */
