@@ -2,6 +2,10 @@ $Id$
 
 ****************************** DRUPAL 6 - 2.x BRANCH ********************************
 
+July 4, 2009
+------------
+NOISSUE by Michelle: Moved around the forum legend & link lists to reduce clutter and organize them better on the page.
+
 July 3, 2009
 ------------
 #497450 by Michelle: More fixes for link lists including some renaming and repositioning.
